; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dialog/extr_util.c_dlg_move_window.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dialog/extr_util.c_dlg_move_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i32* }

@SHADOW_COLS = common dso_local global i32 0, align 4
@SHADOW_ROWS = common dso_local global i32 0, align 4
@dialog_state = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dlg_move_window(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %32

14:                                               ; preds = %5
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @dlg_ctl_size(i32 %15, i32 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call %struct.TYPE_5__* @find_window(i32* %18)
  store %struct.TYPE_5__* %19, %struct.TYPE_5__** %11, align 8
  %20 = icmp ne %struct.TYPE_5__* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %14
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @wresize(i32* %22, i32 %23, i32 %24)
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @mvwin(i32* %26, i32 %27, i32 %28)
  %30 = call i32 (...) @refresh()
  br label %31

31:                                               ; preds = %21, %14
  br label %32

32:                                               ; preds = %31, %5
  ret void
}

declare dso_local i32 @dlg_ctl_size(i32, i32) #1

declare dso_local %struct.TYPE_5__* @find_window(i32*) #1

declare dso_local i32 @wresize(i32*, i32, i32) #1

declare dso_local i32 @mvwin(i32*, i32, i32) #1

declare dso_local i32 @refresh(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
